[project]
name = "travel-ai-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai==0.22.5",
    "fastapi>=0.135.1",
    "google-generativeai>=0.8.6",
    "google-search-results>=2.4.2",
    "onnxruntime==1.13.1",
    "openai>=1.109.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "setuptools<81",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
]
